🐛 Fix unnecessary whitespace generation

--- a/frontend/packages/erd-core/src/components/ERDRenderer/ERDRenderer.module.css
+++ b/frontend/packages/erd-core/src/components/ERDRenderer/ERDRenderer.module.css
@@ -47,11 +47,11 @@
 }
 @media screen and (max-width: 768px) {
   .toolbarWrapper {
-    transition: opacity 0.3s, visibility 0.3s;
+    transition: opacity 0.6s;
     opacity: 1;
     visibility: visible;
-    min-width: 354px;
   }
+
   :global([data-state='expanded']) + .main .toolbarWrapper {
     opacity: 0;
     visibility: hidden;
